dynamix/force-app/main/default/objects/lightningbuddy__Carousel_Image__c/fields/lightningbuddy__Actions__c.field-meta.xml
<CustomField>
    <fullName>lightningbuddy__Actions__c</fullName>
    <label>Actions</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>lightningbuddy__Actions__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Image Carousel</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>lightningbuddy__Actions__c</referenceTo>
    <relationshipLabel>Carousel Images</relationshipLabel>
    <relationshipName>Carousel_Images</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>